update the connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-B8AIUGC\\MSSQLSERVER22;Initial Catalog=CarRentalDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Server=sql8020.site4now.net;Database=db_9a6ff0_ammarcar;User Id=db_9a6ff0_ammarcar_admin;Password=1M*f5U#TUFwX4Ef@;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
